2004-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

        * gst/gst.c: capitalize beginnings of popt options

2004-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/README: add some notes on how to update translations

2004-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ABOUT-NLS: removed, is autogenerated from autopoint
	* autogen.sh: add autopoint stuff
	* configure.ac: fix up gettext stuff
	* gst/Makefile.am: add i18n headers to noinst_HEADERS
	* gst/elements/gsttypefindelement.c: add header include
	* gst/gettext.h: add header, copy from system-installed header
        * gst/gst-i18n-app.h: to be included by each app having translations
        * gst/gst-i18n-lib.h: to be included by each lib having translations
	* gst/gst.c: (init_pre): fix up gettext calls
	* gst/gst_private.h: remove i18n stuff, moving to separate headers
	* po/LINGUAS: the new way to specify translations present
	* po/Makefile.in.in: removed from cvs, autogenerated from autopoint
	* po/Makevars: the variables filled in for GStreamer
	* po/POTFILES.in: added new files with translations
	* po/de.po: has new strings
	* po/nl.po: readded, has new strings

2004-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

        * gst/gsttag.c: fix some strings marked for translation

2004-01-13  Iain <iain@prettypeople.org>

	* gst/schedulers/gstoptimalscheduler.c (add_to_group): Reference the
	group when we add an element to it, cos we unref it when we remove one

2004-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/debug/commandline.c: (debug_not_reached):
	* testsuite/debug/output.c: (check_message):
          fix testsuite

2004-01-12  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* examples/cutter/.cvsignore:
	* examples/helloworld/.cvsignore:
	* examples/launch/.cvsignore:
	* examples/manual/.cvsignore:
	* examples/mixer/.cvsignore:
	* examples/pingpong/.cvsignore:
	* examples/plugins/.cvsignore: